--- a/cluster-1/gotk-sync.yaml
+++ b/cluster-1/gotk-sync.yaml
@@ -18,7 +18,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./cluster-1/application-1
+  path: ./cluster-1
   prune: true
   sourceRef:
     kind: GitRepository
