--- a/cluster-2/kustomization.yaml
+++ b/cluster-2/kustomization.yaml
@@ -1,12 +1,11 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: my-app
-  namespace: flux-system
-spec:
-  interval: 1m
-  path: ./cluster-1
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+resources:
+  - gotk-components.yaml
+  - gotk-sync.yaml 
+  - ./application-1/gitrepository.yaml
+  - ./application-1/imagerepository.yaml
+  - ./application-1/imagepolicy.yaml
+  - ./application-1/helmrelease.yaml
+  - ./application-1/helmchart.yaml
+  - ./application-1/imageupdateautomation.yaml
